# mediasoup-rs

./: .gitmodules  Cargo.toml  DESIGN  README  README.md  TODO  mediasoup-sys
mediasoup-sys/: Cargo.toml  TODO  build.rs
mediasoup-sys/src/: lib.cc  lib.h  lib.rs
src/: api.rs  error.rs  main.rs
