[package]
name = "mediasoup_client"
version = "0.1.0"
authors = ["haze <isnt@haze.cool>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
tokio = { version = "0.2.3", features = ["rt-threaded", "macros", "sync", "time"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8.1", features = ["v4"] }
thiserror = "1.0.22"
mediasoup-sys = { path = "mediasoup-sys" }
reqwest = { version = "0.10.9", features = ["json", "blocking"] }

[workspace]
members = [
    "mediasoup-sys"
]
