[package]
name = "mediasoup-sys"
version = "0.1.0"
authors = ["haze <isnt@haze.cool>"]
edition = "2018"

[dependencies]
cxx = { git = "https://github.com/dtolnay/cxx" } 
tokio = { version = "0.2.3", features = ["sync"] }

[build-dependencies]
pkg-config = "0.3.17"
cc = "1.0.54"
cxx-build = { git = "https://github.com/dtolnay/cxx" } 
